# bones_snap

./: Cargo.toml  README.md
examples/: bones.rs
snap_core/: Cargo.toml
snap_core/src/: capture.rs  input.rs  lib.rs
snap_macro/: Cargo.toml
snap_macro/src/: lib.rs
src/: lib.rs
tests/: many_comps.rs  minimal.rs  minimalist.rs  snap.rs
