workspace.members = [ "." , "snap_core", "snap_macro"]

[package]
name = "bones_snap"
version = "0.1.0"
edition = "2021"

[dependencies]
snap_macro = { path = "snap_macro" }
serde = { version = "1.0.204", features = ["derive"] }
bones_ecs = { git = "https://github.com/fishfolk/bones", rev = "f4e60340c123876a77b6e9d2988c59a24b17efe6", features = ["derive"] }
dont-expand = "0.1.0"


[dev-dependencies]
bincode = "1.3.3"
