workspace.members = [ "." , "snap_core", "snap_macro"]

[package]
name = "bones_snap"
version = "0.1.0"
edition = "2021"

[dependencies]
snap_macro = { path = "snap_macro" }
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
bones_ecs = { git = "https://github.com/defic/bones", rev = "3c7e5ba191194dd0222d236a7189c63db58476c7", features = ["derive", "serde"] }
