workspace.members = [ "." , "snap_core", "snap_macro"]

[package]
name = "bones_snap"
version = "0.1.0"
edition = "2021"

[dependencies]
snap_macro = { path = "snap_macro" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"
bones_ecs = { git = "https://github.com/fishfolk/bones", rev = "c149919fe60e57e20e2db1c3711d5b08fe194202", features = ["derive", "serde"] }
